objects/Event_Plan__c.object
<CustomObject>
    <description>Represents individual events planned by EventPro.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Indicates the current approval status of the event, whether it is pending approval, approved, or rejected.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Budget__c</fullName>
        <description>The budget of the event.</description>
        <label>Event Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>The date and time of the event.</description>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Flag__c</fullName>
        <description>The internal indicator to monitor and manage the overall health status of the event.</description>
        <label>Event Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>The name of the event.</description>
        <label>Event Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>The category or type of the event.</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Cultural</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The physical location of the event.</description>
        <label>Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Tasks_Count__c</fullName>
        <description>The Roll-Up Summary field automatically calculates and stores the total count of pending tasks associated with each event.</description>
        <label>Pending Tasks Count</label>
        <summaryFilterItems>
            <field>Event_Task__c.Task_Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Task__c.Task_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Task__c.Event_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <description>The Roll-Up Summary field automatically calculates and stores the total sum of expenses associated with each event, providing insight into the event&apos;s financial status.</description>
        <label>Total Expenses</label>
        <summarizedField>Event_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Event_Expense__c.Associated_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks_Count__c</fullName>
        <description>The Roll-Up Summary field automatically calculates and stores the total count of tasks associated with each event.</description>
        <label>Total Tasks Count</label>
        <summaryForeignKey>Event_Task__c.Event_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Event Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Event Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>